changes in input json and added task model
