# docs/swagger.json
@@ -214,6 +214,51 @@
                 }
             }
         },
+        "/task": {
+            "post": {
+                "description": "create a task and assign it to someone and project.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "create a task",
+                "parameters": [
+                    {
+                        "description": "Enter task info and team id",
+                        "name": "model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/database.Model"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/team": {
             "post": {
                 "description": "Create an team from json file with team as a key and structure as a value.",
@@ -292,91 +337,6 @@
                 }
             }
         },
-        "/teamUser": {
-            "post": {
-                "description": "Add new user to the team.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Add user",
-                "parameters": [
-                    {
-                        "description": "Enter user id, team id and role id",
-                        "name": "model",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/database.Model"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authorization header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    }
-                }
-            }
-        },
-        "/teamUser/{team_id}": {
-            "get": {
-                "description": "Get all users in the taeam",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Get team members",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Enter team id",
-                        "name": "team_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authorization header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    }
-                }
-            }
-        },
         "/user": {
             "post": {
                 "description": "Create an user from json file with user as a key and structure as a value.",
@@ -421,6 +381,91 @@
                     }
                 }
             }
+        },
+        "/userTeam": {
+            "post": {
+                "description": "Add new user to the team.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Add user",
+                "parameters": [
+                    {
+                        "description": "Enter user id, team id and role id",
+                        "name": "model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/database.Model"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/userTeam/{team_id}": {
+            "get": {
+                "description": "Get all users in the taeam",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get team members",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Enter team id",
+                        "name": "team_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -436,6 +481,9 @@
                 "role": {
                     "$ref": "#/definitions/database.Role"
                 },
+                "task": {
+                    "$ref": "#/definitions/database.Task"
+                },
                 "team": {
                     "$ref": "#/definitions/database.Team"
                 },
@@ -444,6 +492,9 @@
                 },
                 "user_form": {
                     "$ref": "#/definitions/database.UserForm"
+                },
+                "user_team": {
+                    "$ref": "#/definitions/database.UserTeam"
                 }
             }
         },
@@ -481,9 +532,44 @@
                 }
             }
         },
+        "database.Task": {
+            "type": "object",
+            "properties": {
+                "assigner_id": {
+                    "type": "integer"
+                },
+                "current_status": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "end_time": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "project_id": {
+                    "type": "integer"
+                },
+                "start_time": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "database.Team": {
             "type": "object",
             "properties": {
+                "description": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -529,6 +615,20 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "database.UserTeam": {
+            "type": "object",
+            "properties": {
+                "role_id": {
+                    "type": "integer"
+                },
+                "team_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
